# test-IT-Lab

./: .env.template  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.dev.sh  entrypoint.sh  pyproject.toml
backend/core/: settings.py  urls.py
backend/todo/: apps.py  routers.py  signals.py
backend/todo/admin/: __init__.py  category_admin.py  mixins.py  task_admin.py  telegram_user_admin.py
backend/todo/filters/: __init__.py  task_filters.py  telegram_user_filters.py
backend/todo/migrations/: 0001_initial.py  0002_alter_task_category.py  0003_task_is_alerted.py  0004_task_is_expired.py  0005_remove_task_is_alerted_task_is_alerted_expired_and_more.py  0006_alter_task_options.py  0007_remove_task_is_alerted_hour.py
backend/todo/models/: __init__.py  category.py  task.py  telegram_user.py
backend/todo/serializers/: __init__.py  category_serializer.py  task_serializer.py  telegram_user_serializer.py
backend/todo/tasks/: __init__.py  notify_expired.py  update_status.py
backend/todo/viewsets/: __init__.py  category_viewset.py  task_viewset.py  telegram_user_viewset.py
bot/: Dockerfile  api.py  config.py  loader.py  pyproject.toml  runbot.py
bot/handlers/: __init__.py
bot/handlers/errors/: error_handler.py
bot/handlers/users/: __init__.py  start.py  task_creating.py  tasks.py
bot/keyboards/inline/: __init__.py  category_keyboards.py  start_keyboards.py  tasks_keyboards.py
bot/middlewares/: __init__.py  throttling.py  user_exists.py
bot/states/: tasks_state.py
bot/utils/: set_bot_commands.py  utils.py
nginx/: nginx_dev.conf
